--- a/CV.html
+++ b/CV.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="./CV.css">
 <body>
 
+    <div class="bar">
+        <span class="space">Home</span> <span class = space>About</span>
+    </div>
     <div class="container">
         <div class = "box-1">
-            <button class="button">Hello I'm</button>
+            <span class="button">Hello I'm</span>
             
             <h1>
                 Tuấn Hùng
@@ -23,10 +26,16 @@
 
 
         <div class = "box-2">
-            <img src="./Thomas.jpg" width="350px" height="350px;">
+            <img class="round" src="./CV.png" width="350px" height="350px;">
         </div>
     </div>
 
+    <div>
+        <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br />
+        <br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br />
+        <br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br /><br /> <br /> <br /> <br />
+    </div>
+    
 </body>
 </head>
 </html>
