--- a/btAHoang.html
+++ b/btAHoang.html
@@ -22,9 +22,9 @@
                     </div>
                     <div class="item4">
                         <!-- <input type="submit" value="Submit" class="btn2"> -->
-                        <button class="btn2" id="btn" type="submit" >Submit form</button>
+                        <button class="btn2" id="btn" type="submit" onclick="return ValidateForm()" >Submit form</button>
                     </div>
-                    <div class="item5"><input class="nameInput" type="text" id="nameInput" name="fname" placeholder="item name" required></div>
+                    <div class="item5"><input class="nameInput" type="text" id="nameInput" name="fname"  placeholder="item name" required></div>
                     <div class="item6">
                         <select class="selectBox" id="Category" name="Category" required>
                             <option value="" disabled selected>Choose your category</option>
